# OSOL.Extremum

./: .coverage  .coveragerc  .coveralls.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  build.sbt  build.sh  coverage.xml  docker-compose.yml  launch.sh  make.bat  pom.xml  pyproject.toml  settings.xml  setup.py
.github/workflows/: deploy_pypi.yml  main.yml  publish_docker.yml  publish_pypi.yml
Examples/: NumericalObjects.Intervals.ipynb  NumericalObjects.Optimization.ipynb  NumericalObjects.Vectors.ipynb  Optimization.Benchmarking.ipynb  Optimization.Demo.ipynb  Pipfile
JVM/: build.sbt
OSOL/: .coveragerc
OSOL.Extremum/: .coveragerc  .pypirc  Pipfile  setup.py
PyTools/: .coveragerc  requirements.txt
Sources/: LICENSE.txt  Pipfile  setup.py
docs/: OSOL.Extremum.Applications.rst  OSOL.Extremum.Cybernetics.rst  OSOL.Extremum.Numerical_Objects.rst  OSOL.Extremum.Optimization.Algorithms.rst  OSOL.Extremum.Optimization.Tasks.rst  OSOL.Extremum.Optimization.Terminators.rst  OSOL.Extremum.Optimization.rst  OSOL.Extremum.Tools.rst  OSOL.Extremum.rst  conf.py  index.rst
libs/: parser.py
osol/: benchmarks.py  smoke.py
project/: plugins.sbt
tests/: test_algorithm.py  test_algorithm_tools.py  test_algorithms_tools.py  test_benchmarks.py  test_explosion_search.py  test_flower_pollination_algorithm.py  test_gradient_descent.py  test_osol.py  test_parser.py  test_particle_swarm_optimization.py  test_random_search.py  test_smoke.py  test_termination.py  test_tools_parser.py
(+1425 files in other folders)
