[tool.poetry]
name = "osol"
version = "0.0.1"
description = ""
authors = ["wol4aravio <panovskiy.v@yandex.ru>"]
license = "MIT"

exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
