[tool.poetry]
name = "osol"
version = "0.0.7"
description = ""
authors = ["wol4aravio <panovskiy.v@yandex.ru>"]
license = "MIT"

exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
jupyter = "^1.0.0"
plotly = "^4.14.3"
tqdm = "^4.60.0"
joblib = "^1.0.1"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
pytest-rerunfailures = "^9.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
